@@ -11,9 +11,8 @@ configure = admin/config/media/imagecache-token
 ; Tests.
 files[] = tests/imagecache_token.test
 
-; Information added by Drupal.org packaging script on 2016-03-06
-version = "7.x-1.0-rc2"
+; Information added by Drupal.org packaging script on 2019-02-16
+version = "7.x-1.0-rc3"
 core = "7.x"
 project = "imagecache_token"
-datestamp = "1457296440"
-
+datestamp = "1550347690"
